# coin-recognition

./: CMakeLists.txt  README.md  coin-detection.cc  coin_detection.cpp  dataset-download.py  scrape.py
Coin Detection/: Detection.cpp  convert_to_edges.cpp
